@@ -7,3 +7,4 @@
 ^\.github$
 ^\.travis\.yml$
 R/dbox-testing.R
+working/
